--- a/acceptor.html
+++ b/acceptor.html
@@ -56,7 +56,7 @@
 </div>
 
 <script>
-  const scriptURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Replace this with your deployed Apps Script Web App URL
+  const scriptURL = "YOUR_GOOGLE_SCRIPT_URL"; // Replace this with your deployed Apps Script Web App URL
 
   document.getElementById("acceptForm").addEventListener("submit", function(e) {
     e.preventDefault();
@@ -83,4 +83,5 @@
 
 </body>
 </html>
+
 
