--- a/donor.html
+++ b/donor.html
@@ -1,62 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Donate Food - FeedConnect</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #e1bee7);
+      font-family: 'Poppins', sans-serif;
+      background: #f2f2f2;
       margin: 0;
-      padding: 0;
+      padding: 20px;
     }
-
     .container {
-      max-width: 600px;
+      max-width: 700px;
+      margin: auto;
       background: white;
-      margin: 80px auto;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-
     h2 {
       text-align: center;
-      color: #4a148c;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
-
     label {
-      display: block;
-      margin: 15px 0 5px;
-      font-weight: bold;
+      font-weight: 500;
     }
-
     input, select, textarea {
       width: 100%;
       padding: 10px;
-      border-radius: 10px;
+      margin: 10px 0 20px;
+      border-radius: 5px;
       border: 1px solid #ccc;
-      margin-bottom: 20px;
     }
-
     button {
-      background: linear-gradient(to right, #66bb6a, #43a047);
+      background-color: #2e7d32;
       color: white;
-      padding: 12px 25px;
       border: none;
-      border-radius: 25px;
-      font-size: 16px;
+      padding: 12px 20px;
+      border-radius: 5px;
       cursor: pointer;
-      display: block;
-      margin: 0 auto;
-      transition: 0.3s ease;
     }
-
-    button:hover {
-      background: linear-gradient(to right, #43a047, #2e7d32);
-      transform: scale(1.05);
+    #chatBox {
+      display: none;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 15px;
+      background-color: #f9f9f9;
+      margin-top: 20px;
+      max-height: 300px;
+      overflow-y: auto;
+    }
+    #messages {
+      height: 150px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      background: white;
+    }
+    #chatInput {
+      display: flex;
+    }
+    #chatInput input {
+      flex: 1;
     }
   </style>
 </head>
@@ -64,47 +72,46 @@
 
   <div class="container">
     <h2>Donate Food</h2>
-    <form action="https://forms.gle/YOUR_FORM_LINK_HERE" method="post">
-      <label for="name">Your Name</label>
-      <input type="text" id="name" name="name" required>
 
-      <label for="food">Food Details</label>
-      <textarea id="food" name="food" rows="3" required></textarea>
+    <form id="donorForm">
+      <label for="donorName">Your Name</label>
+      <input type="text" id="donorName" required>
 
-      <label for="quantity">Quantity (approx)</label>
-      <input type="text" id="quantity" name="quantity" required>
+      <label for="foodDetails">Food Description</label>
+      <textarea id="foodDetails" rows="3" required></textarea>
 
-      <label for="org">Choose an Orphanage/Old Age Home</label>
-      <select id="acceptorDropdown">
-        <option>Loading Acceptors...</option>
-      </select>
+      <label for="location">Your Location</label>
+      <input type="text" id="location" required>
 
-      <label for="contact">Your Contact</label>
-      <input type="text" id="contact" name="contact" required>
+      <label for="recipient">Select Orphanage / Old Age Home</label>
+      <select id="recipient" required>
+  <option>Loading...</option>
+</select>
+
 
       <button type="submit">Submit Donation</button>
     </form>
-  </div>
-  <script>
-  const acceptorDataURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Replace with your actual script URL
 
-  fetch(acceptorDataURL)
+ <script>
+  const donorURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // same as above
+
+  fetch(donorURL)
     .then(res => res.json())
     .then(data => {
-      const dropdown = document.getElementById("acceptorDropdown");
-      dropdown.innerHTML = '<option value="">-- Select an Accepting Organization --</option>';
+      const select = document.getElementById("recipient");
+      select.innerHTML = '<option value="">-- Select an Organization --</option>';
       data.forEach(name => {
-        const option = document.createElement("option");
-        option.value = name;
-        option.textContent = name;
-        dropdown.appendChild(option);
+        const opt = document.createElement("option");
+        opt.value = name;
+        opt.textContent = name;
+        select.appendChild(opt);
       });
-    })
-    .catch(error => {
-      console.error("Error fetching acceptors:", error);
-      document.getElementById("acceptorDropdown").innerHTML = '<option>Error loading data</option>';
     });
 </script>
+
+
+</body>
+</html>
 
 
 </body>
