--- a/donor.html
+++ b/donor.html
@@ -1,159 +1,100 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Donate Food - FeedConnect</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #e8f5e9, #c8e6c9);
-      margin: 0;
-      padding: 20px;
-    }
+body {
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(to right, #512da8, #673ab7);
+  margin: 0;
+  padding: 30px;
+}
 
-    .container {
-      max-width: 700px;
-      margin: auto;
-      background: white;
-      padding: 30px 40px;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-    }
+.container {
+  max-width: 700px;
+  margin: auto;
+  background: #ffffff;
+  padding: 40px;
+  border-radius: 15px;
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+}
 
-    .container:hover {
-      transform: translateY(-3px);
-    }
+h2 {
+  text-align: center;
+  margin-bottom: 25px;
+  color: #512da8;
+  font-weight: 600;
+  font-size: 28px;
+}
 
-    h2 {
-      text-align: center;
-      margin-bottom: 25px;
-      color: #2e7d32;
-    }
+label {
+  font-weight: 500;
+  color: #333;
+  display: block;
+  margin-bottom: 6px;
+}
 
-    label {
-      font-weight: 500;
-      display: block;
-      margin-bottom: 5px;
-      color: #333;
-    }
+input, select, textarea {
+  width: 100%;
+  padding: 14px;
+  margin: 10px 0 25px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 15px;
+  transition: border 0.3s;
+}
 
-    input, select, textarea {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0 25px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-      box-sizing: border-box;
-      transition: border-color 0.3s;
-    }
+input:focus, select:focus, textarea:focus {
+  border-color: #673ab7;
+  outline: none;
+}
 
-    input:focus, select:focus, textarea:focus {
-      border-color: #66bb6a;
-      outline: none;
-    }
+button {
+  background: linear-gradient(to right, #43a047, #388e3c);
+  color: white;
+  border: none;
+  padding: 14px;
+  border-radius: 30px;
+  font-size: 16px;
+  width: 100%;
+  cursor: pointer;
+  transition: background 0.3s;
+}
 
-    button {
-      background-color: #2e7d32;
-      color: white;
-      border: none;
-      padding: 14px 22px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 100%;
-      transition: background-color 0.3s ease;
-    }
+button:hover {
+  background: linear-gradient(to right, #388e3c, #2e7d32);
+}
 
-    button:hover {
-      background-color: #1b5e20;
-    }
+#chatBox {
+  display: none;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 15px;
+  background-color: #f9f9f9;
+  margin-top: 20px;
+  max-height: 300px;
+  overflow-y: auto;
+}
 
-    #chatBox {
-      display: none;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
-      background-color: #f9f9f9;
-      margin-top: 20px;
-      max-height: 300px;
-      overflow-y: auto;
-    }
+#messages {
+  height: 150px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background: white;
+}
 
-    #messages {
-      height: 150px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      background: white;
-    }
+#chatInput {
+  display: flex;
+  gap: 10px;
+}
 
-    #chatInput {
-      display: flex;
-      gap: 10px;
-    }
+#chatInput input {
+  flex: 1;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
 
-    #chatInput input {
-      flex: 1;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
+select option:first-child {
+  color: gray;
+}
 
-    select option:first-child {
-      color: gray;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="container">
-    <h2>Donate Food</h2>
-
-    <form id="donorForm">
-      <label for="donorName">Your Name</label>
-      <input type="text" id="donorName" required>
-
-      <label for="foodDetails">Food Description</label>
-      <textarea id="foodDetails" rows="3" required></textarea>
-
-      <label for="location">Your Location</label>
-      <input type="text" id="location" required>
-
-      <label for="recipient">Select Orphanage / Old Age Home</label>
-      <select id="acceptorDropdown">
-        <option>Loading acceptors...</option>
-      </select>
-
-      <button type="submit">Submit Donation</button>
-    </form>
-  </div>
-
-  <script>
-    const acceptorDataURL = "https://script.google.com/macros/s/AKfycby_aOUSlg6neOHpMdLDOFQkD_5H6U8CNzK9yVBtI9bsy3ca4TJ9D4PhvjUf6Jf5BIMF6Q/exec";
-
-    fetch(acceptorDataURL)
-      .then(res => res.json())
-      .then(data => {
-        const dropdown = document.getElementById("acceptorDropdown");
-        dropdown.innerHTML = '<option value="">-- Select an Accepting Organization --</option>';
-        data.forEach(name => {
-          const option = document.createElement("option");
-          option.value = name;
-          option.textContent = name;
-          dropdown.appendChild(option);
-        });
-      })
-      .catch(error => {
-        console.error("Error fetching acceptors:", error);
-        document.getElementById("acceptorDropdown").innerHTML = '<option>Error loading data</option>';
-      });
-  </script>
-
-</body>
-</html>
 
