--- a/acceptor.html
+++ b/acceptor.html
@@ -7,38 +7,59 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: #f7f7f7;
+      background: linear-gradient(to right, #512da8, #673ab7);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
     }
+
     .container {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      width: 400px;
+      background: #ffffff;
+      padding: 40px 30px;
+      border-radius: 15px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
+      width: 420px;
     }
+
     h2 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+      color: #512da8;
+      font-weight: 600;
+      font-size: 24px;
     }
+
     input {
       width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border-radius: 5px;
+      padding: 14px;
+      margin-bottom: 20px;
+      border-radius: 10px;
       border: 1px solid #ccc;
+      font-size: 15px;
+      transition: border-color 0.3s;
     }
+
+    input:focus {
+      border-color: #673ab7;
+      outline: none;
+    }
+
     button {
-      background-color: #2e7d32;
+      background: linear-gradient(to right, #43a047, #388e3c);
       color: white;
       border: none;
-      padding: 10px 20px;
+      padding: 14px;
       width: 100%;
-      border-radius: 5px;
+      border-radius: 30px;
+      font-size: 16px;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background: linear-gradient(to right, #388e3c, #2e7d32);
     }
   </style>
 </head>
@@ -56,7 +77,7 @@
 </div>
 
 <script>
-  const scriptURL = "https://script.google.com/macros/s/AKfycby_aOUSlg6neOHpMdLDOFQkD_5H6U8CNzK9yVBtI9bsy3ca4TJ9D4PhvjUf6Jf5BIMF6Q/exec"; // Replace this with your deployed Apps Script Web App URL
+  const scriptURL = "https://script.google.com/macros/s/AKfycby_aOUSlg6neOHpMdLDOFQkD_5H6U8CNzK9yVBtI9bsy3ca4TJ9D4PhvjUf6Jf5BIMF6Q/exec";
 
   document.getElementById("acceptForm").addEventListener("submit", function(e) {
     e.preventDefault();
@@ -83,5 +104,6 @@
 
 </body>
 </html>
+
 
 
