--- a/volunteer.html
+++ b/volunteer.html
@@ -7,58 +7,75 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #e8f5e9, #c8e6c9);
+      background: linear-gradient(135deg, #4caf50, #81c784);
       margin: 0;
       padding: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .container {
       max-width: 600px;
-      margin: 80px auto;
       background: white;
       padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      border-radius: 20px;
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
     }
 
     h2 {
       text-align: center;
       color: #2e7d32;
       margin-bottom: 30px;
+      font-size: 26px;
     }
 
     label {
-      font-weight: bold;
+      font-weight: 600;
       margin-top: 15px;
       display: block;
+      color: #333;
     }
 
     input, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 14px;
       margin-top: 8px;
       margin-bottom: 20px;
-      border-radius: 10px;
+      border-radius: 12px;
       border: 1px solid #ccc;
+      font-size: 15px;
+      transition: border 0.3s ease;
+    }
+
+    input:focus, textarea:focus {
+      border-color: #66bb6a;
+      outline: none;
     }
 
     button {
       background: linear-gradient(to right, #66bb6a, #388e3c);
       color: white;
-      padding: 12px 25px;
+      padding: 14px;
       border: none;
-      border-radius: 25px;
+      border-radius: 30px;
       font-size: 16px;
       cursor: pointer;
-      margin: 0 auto;
-      display: block;
+      width: 100%;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: linear-gradient(to right, #388e3c, #2e7d32);
     }
 
     .success-message {
       text-align: center;
-      color: green;
+      color: #2e7d32;
       font-weight: bold;
-      margin-top: 15px;
+      margin-top: 20px;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -66,7 +83,7 @@
 
   <div class="container">
     <h2>Volunteer Registration</h2>
-    <form id="volunteerForm" action="https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec/exec" method="POST" onsubmit="submitForm(event)">
+    <form id="volunteerForm" action="https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec" method="POST" onsubmit="submitForm(event)">
       <label for="volName">Full Name</label>
       <input type="text" name="volName" id="volName" required>
 
@@ -77,7 +94,7 @@
       <input type="text" name="area" id="area" required>
 
       <label for="availability">Availability</label>
-      <textarea name="availability" id="availability" required></textarea>
+      <textarea name="availability" id="availability" rows="4" required></textarea>
 
       <button type="submit">Join as Volunteer</button>
       <div id="success" class="success-message"></div>
