--- a/volunteer.html
+++ b/volunteer.html
@@ -2,60 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Volunteer with Us - FeedConnect</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <title>Donate Food - FeedConnect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #4caf50, #81c784);
       margin: 0;
       padding: 0;
-      min-height: 100vh;
+      background: linear-gradient(135deg, #4a148c, #7e57c2);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .container {
-      max-width: 600px;
-      background: white;
+      background: #ffffff;
       padding: 40px;
+      width: 450px;
       border-radius: 20px;
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
     }
 
     h2 {
       text-align: center;
-      color: #2e7d32;
+      color: #2e2e2e;
       margin-bottom: 30px;
-      font-size: 26px;
     }
 
     label {
       font-weight: 600;
       margin-top: 15px;
       display: block;
-      color: #333;
+      color: #444;
     }
 
-    input, textarea {
+    input, textarea, select {
       width: 100%;
-      padding: 14px;
+      padding: 12px;
       margin-top: 8px;
       margin-bottom: 20px;
-      border-radius: 12px;
+      border-radius: 10px;
       border: 1px solid #ccc;
       font-size: 15px;
       transition: border 0.3s ease;
     }
 
-    input:focus, textarea:focus {
-      border-color: #66bb6a;
+    input:focus, textarea:focus, select:focus {
+      border-color: #7cb342;
       outline: none;
     }
 
     button {
-      background: linear-gradient(to right, #66bb6a, #388e3c);
+      background: linear-gradient(to right, #66bb6a, #43a047);
       color: white;
       padding: 14px;
       border: none;
@@ -67,7 +66,7 @@
     }
 
     button:hover {
-      background: linear-gradient(to right, #388e3c, #2e7d32);
+      background: linear-gradient(to right, #43a047, #2e7d32);
     }
 
     .success-message {
@@ -75,36 +74,40 @@
       color: #2e7d32;
       font-weight: bold;
       margin-top: 20px;
-      font-size: 16px;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h2>Volunteer Registration</h2>
-    <form id="volunteerForm" action="https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec" method="POST" onsubmit="submitForm(event)">
-      <label for="volName">Full Name</label>
-      <input type="text" name="volName" id="volName" required>
+    <h2>Donate Food</h2>
+    <form id="donationForm" action="YOUR_GOOGLE_SCRIPT_URL" method="POST" onsubmit="submitDonation(event)">
+      <label for="donorName">Your Name</label>
+      <input type="text" id="donorName" name="donorName" required>
 
-      <label for="volContact">Contact Number</label>
-      <input type="text" name="volContact" id="volContact" required>
+      <label for="foodDesc">Food Description</label>
+      <textarea id="foodDesc" name="foodDesc" rows="3" required></textarea>
 
-      <label for="area">Preferred Area / City</label>
-      <input type="text" name="area" id="area" required>
+      <label for="location">Your Location</label>
+      <input type="text" id="location" name="location" required>
 
-      <label for="availability">Availability</label>
-      <textarea name="availability" id="availability" rows="4" required></textarea>
+      <label for="organization">Select Orphanage / Old Age Home</label>
+      <select id="organization" name="organization" required>
+        <option value="">-- Select an Accepting Organization --</option>
+        <option value="Orphanage A">Orphanage A</option>
+        <option value="Old Age Home B">Old Age Home B</option>
+        <!-- Add more as needed -->
+      </select>
 
-      <button type="submit">Join as Volunteer</button>
+      <button type="submit">Submit Donation</button>
       <div id="success" class="success-message"></div>
     </form>
   </div>
 
   <script>
-    function submitForm(e) {
+    function submitDonation(e) {
       e.preventDefault();
-      const form = document.getElementById('volunteerForm');
+      const form = document.getElementById('donationForm');
       const formData = new FormData(form);
 
       fetch(form.action, {
@@ -113,12 +116,12 @@
       })
       .then(res => res.text())
       .then(data => {
-        document.getElementById("success").textContent = "Thank you for signing up!";
+        document.getElementById("success").textContent = "Thank you for your donation!";
         form.reset();
       })
       .catch(error => {
-        alert("An error occurred. Please try again.");
-        console.error(error);
+        alert("There was an error submitting the form. Please try again.");
+        console.error("Error:", error);
       });
     }
   </script>
