--- a/volunteer.html
+++ b/volunteer.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #4a148c, #7e57c2); /* Updated background */
+      background: linear-gradient(135deg, #4a148c, #7e57c2);
       margin: 0;
       padding: 0;
       height: 100vh;
@@ -17,9 +17,9 @@
     }
 
     .container {
-      max-width: 750px;
+      max-width: 750px; /* Increased width */
       background: white;
-      padding: 40px;
+      padding: 50px;     /* Slightly more padding */
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     }
@@ -38,18 +38,18 @@
 
     input, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin-top: 8px;
       margin-bottom: 20px;
       border-radius: 10px;
       border: 1px solid #ccc;
-      font-size: 15px;
+      font-size: 16px;
     }
 
     button {
       background: linear-gradient(to right, #66bb6a, #388e3c);
       color: white;
-      padding: 12px 25px;
+      padding: 14px 30px;
       border: none;
       border-radius: 25px;
       font-size: 16px;
@@ -112,4 +112,5 @@
 
 </body>
 </html>
+
 
