--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <p>Welcome to FeedConnect – A platform that connects food donors with orphanages and old-age homes in need. Make a difference with your surplus food today!</p>
 
     <!-- Optional Image in Hero Section -->
-    <img src="your-image-url-1.jpg" alt="Food donation banner" class="hero-image">
+    <img src="https://i.pinimg.com/736x/6a/2a/85/6a2a85bb2fa79c1f4914ce0dd8f2347a.jpg" alt="Food donation banner" class="hero-image">
 
     <div class="buttons">
       <a href="donor.html" class="btn donor">Donate Food</a>
@@ -179,7 +179,7 @@
     </p>
 
     <!-- Optional Image in About Section -->
-    <img src="your-image-url-2.jpg" alt="About FeedConnect" class="about-image">
+    <img src="https://brownliving.in/cdn/shop/articles/food-donation-services-988981.jpg?v=1703200384" alt="About FeedConnect" class="about-image">
   </section>
 
   <section id="volunteer">
