--- a/acceptor.html
+++ b/acceptor.html
@@ -91,13 +91,35 @@
 </div>
 
 <script>
-  const scriptURL = "https://script.google.com/macros/s/AKfycby_aOUSlg6neOHpMdLDOFQkD_5H6U8CNzK9yVBtI9bsy3ca4TJ9D4PhvjUf6Jf5BIMF6Q/exec";
+  const sendOtpURL = "https://script.google.com/macros/s/PASTE_YOUR_NEW_OTP_SCRIPT_URL_HERE/exec";
+  const registerURL = "https://script.google.com/macros/s/AKfycby_aOUSlg6neOHpMdLDOFQkD_5H6U8CNzK9yVBtI9bsy3ca4TJ9D4PhvjUf6Jf5BIMF6Q/exec";
   let generatedOTP = "";
 
   function sendOTP() {
-    generatedOTP = Math.floor(100000 + Math.random() * 900000).toString();
-    alert("Your OTP is: " + generatedOTP); // Replace this with actual email send logic
-    document.getElementById("otpSection").style.display = "block";
+    const email = document.getElementById("email").value;
+    if (!email) {
+      alert("Please enter your email address first.");
+      return;
+    }
+
+    fetch(sendOtpURL, {
+      method: "POST",
+      body: JSON.stringify({ email: email })
+    })
+    .then(response => response.json())
+    .then(data => {
+      if (data.success) {
+        generatedOTP = data.otp;
+        alert("OTP has been sent to your email.");
+        document.getElementById("otpSection").style.display = "block";
+      } else {
+        alert("Error sending OTP. Try again.");
+      }
+    })
+    .catch(error => {
+      console.error("Error:", error);
+      alert("Failed to send OTP.");
+    });
   }
 
   document.getElementById("acceptForm").addEventListener("submit", function(e) {
@@ -109,7 +131,7 @@
       return;
     }
 
-    fetch(scriptURL, {
+    fetch(registerURL, {
       method: "POST",
       body: JSON.stringify({
         name: document.getElementById("name").value,
