--- a/acceptor.html
+++ b/acceptor.html
@@ -5,15 +5,19 @@
   <title>Acceptor Registration - FeedConnect</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #512da8, #673ab7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
+   body {
+  font-family: 'Poppins', sans-serif;
+  background: 
+    linear-gradient(to right, rgba(81, 45, 168, 0.8), rgba(103, 58, 183, 0.8)),
+    url('https://stock.adobe.com/search?k=giving+food+to+poor+people') no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
 
     .container {
       background: #ffffff;
