--- a/acceptor.html
+++ b/acceptor.html
@@ -9,7 +9,7 @@
   font-family: 'Poppins', sans-serif;
   background: 
     linear-gradient(to right, rgba(81, 45, 168, 0.8), rgba(103, 58, 183, 0.8)),
-    url('https://stock.adobe.com/search?k=giving+food+to+poor+people') no-repeat center center fixed;
+    url('https://t3.ftcdn.net/jpg/00/30/67/78/360_F_30677807_nSDFegqRqkQcDV9TcOLvXB1tL4PwgXXJ.jpg') no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
