--- a/donor.html
+++ b/donor.html
@@ -125,7 +125,8 @@
         <option>Loading acceptors...</option>
       </select>
 
-      <button type="submit">Submit Donation</button>
+      <button onclick="location.href='chat.html'">Donate Food</button>
+
     </form>
   </div>
 
