--- a/acceptor.html
+++ b/acceptor.html
@@ -5,18 +5,17 @@
   <title>Acceptor Registration - FeedConnect</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
   <style>
-   body {
-  font-family: 'Poppins', sans-serif;
-  background: 
-    url('https://t3.ftcdn.net/jpg/00/30/67/78/360_F_30677807_nSDFegqRqkQcDV9TcOLvXB1tL4PwgXXJ.jpg') no-repeat center center fixed;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-}
-
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: 
+        url('https://t3.ftcdn.net/jpg/00/30/67/78/360_F_30677807_nSDFegqRqkQcDV9TcOLvXB1tL4PwgXXJ.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
 
     .container {
       background: #ffffff;
@@ -75,8 +74,6 @@
     <input type="email" id="email" placeholder="Email Address" required>
     <button type="button" onclick="sendEmailOTP()">Send OTP</button>
     <input type="text" id="otpInput" placeholder="Enter OTP" required>
-    <input type="text" id="phone" placeholder="Contact Number" required>
-    <input type="text" id="location" placeholder="Location" required>
     <button type="submit">Register</button>
   </form>
 </div>
@@ -123,20 +120,16 @@
       return;
     }
 
+    // Save basic info before redirect
     fetch(formScriptURL, {
       method: "POST",
       body: JSON.stringify({
         name: document.getElementById("name").value,
-        email: document.getElementById("email").value,
-        phone: document.getElementById("phone").value,
-        location: document.getElementById("location").value
+        email: document.getElementById("email").value
       })
     })
     .then(res => {
-      alert("Registration successful!");
-      document.getElementById("acceptForm").reset();
-      document.getElementById("otpInput").style.display = "none";
-      generatedOTP = "";
+      window.location.href = "details.html";
     })
     .catch(error => {
       alert("Error registering. Try again.");
@@ -147,3 +140,4 @@
 
 </body>
 </html>
+
