--- a/details.html
+++ b/details.html
@@ -72,7 +72,7 @@
 </div>
 
 <script>
-  const detailScriptURL = "YOUR_DETAILS_FORM_SCRIPT_URL";
+  const detailScriptURL = "https://script.google.com/macros/s/AKfycbx-ewOXmuxaTyuqgmbegXb8FFMlYxflYaCOhOJNU-ZoJzKhvNpv-50GKWrEG-OXq9KF7A/exec";
 
   // Auto-fill phone number from URL
   const urlParams = new URLSearchParams(window.location.search);
