--- a/details.html
+++ b/details.html
@@ -55,7 +55,7 @@
 <div class="container">
   <h2>Complete Organization Details</h2>
   <form id="detailForm">
-    <input type="text" id="phone" placeholder="Contact Number" readonly>
+    <input type="text" id="phone" placeholder="Contact Number" required>
     <input type="text" id="building" placeholder="Building Number" required>
     <input type="text" id="locality" placeholder="Locality" required>
     <input type="text" id="city" placeholder="City" required>
@@ -64,6 +64,7 @@
       <option value="NGO">NGO</option>
       <option value="School">School</option>
       <option value="Orphanage">Orphanage</option>
+      <option value="Old-age Home">Old-age Home</option>
       <option value="Other">Other</option>
     </select>
     <input type="number" id="people" placeholder="Number of People" required>
